@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fl_Group::clip_children() is now public (STR #2017)
 	- Added clarification to Fl_GL_Window mode
 	  function (STR #1945)
 	- Fixed Fluid textcolor output (STR #1992)
